--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,9 @@ body{
     list-style: none;
 }
 .menu ul > li{
-    background: linear-gradient(45deg, #720000, #000000, #720000); color: #000;  line-height:25pt; width: 120%;
+    background: linear-gradient(45deg, #720000, #000000, #720000); 
+    color: #000;  
+    line-height:25pt; 
     border:1px solid #B2250E;
     text-align: center;
     margin: 30px 0;
@@ -62,6 +64,7 @@ body{
     margin:auto;
     padding: auto;
     font-size:20px;
+    margin-bottom:30px;
 }
 .form{
     box-sizing: border-box;
@@ -87,3 +90,65 @@ body{
     width:200px;
     border-radius: 5px;
 }
+.content table{
+    width:1000px;
+    text-align: center;
+    border:none;
+    border-collapse: collapse;
+}
+.content th{
+    border:none;
+}
+.content thead{
+    color:red;
+    background: linear-gradient(45deg, #720000, #726969, #720000); 
+    line-height:25pt; 
+}
+.container tbody tr:nth-child(even){
+    background-color:rgb(70, 67, 67);
+}
+.container tbody tr{
+    height:100px;
+    font-size:18px;
+}
+.content tr td:first-child{
+    width:130px;
+}
+.content tr td:nth-child(2){
+    width:600px;
+}
+.button {
+    position: relative;
+    left:45%;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #7892c2), color-stop(1, #476e9e));
+	background:-moz-linear-gradient(top, #7892c2 5%, #476e9e 100%);
+	background:-webkit-linear-gradient(top, #7892c2 5%, #476e9e 100%);
+	background:-o-linear-gradient(top, #7892c2 5%, #476e9e 100%);
+	background:-ms-linear-gradient(top, #7892c2 5%, #476e9e 100%);
+	background:linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
+	background-color:#7892c2;
+	-moz-border-radius:10px;
+	-webkit-border-radius:10px;
+	border-radius:10px;
+	border:1px solid #4e6096;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-size:19px;
+	padding:19px 50px;
+}
+.button:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #476e9e), color-stop(1, #7892c2));
+	background:-moz-linear-gradient(top, #476e9e 5%, #7892c2 100%);
+	background:-webkit-linear-gradient(top, #476e9e 5%, #7892c2 100%);
+	background:-o-linear-gradient(top, #476e9e 5%, #7892c2 100%);
+	background:-ms-linear-gradient(top, #476e9e 5%, #7892c2 100%);
+	background:linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#476e9e', endColorstr='#7892c2',GradientType=0);
+	background-color:#476e9e;
+}
+.button:active {
+	position:relative;
+	top:1px;
+}
+
