--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,6 @@ body{
 }
 .menu ul > li{
     background: linear-gradient(45deg, #720000, #000000, #720000); 
-    color: #000;  
     line-height:25pt; 
     border:1px solid #B2250E;
     text-align: center;
@@ -118,8 +117,6 @@ body{
     width:600px;
 }
 .button {
-    position: relative;
-    left:45%;
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #7892c2), color-stop(1, #476e9e));
 	background:-moz-linear-gradient(top, #7892c2 5%, #476e9e 100%);
 	background:-webkit-linear-gradient(top, #7892c2 5%, #476e9e 100%);
@@ -135,7 +132,8 @@ body{
 	cursor:pointer;
 	color:#ffffff;
 	font-size:19px;
-	padding:19px 50px;
+    padding:19px 50px;
+    margin:10px;
 }
 .button:hover {
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #476e9e), color-stop(1, #7892c2));
@@ -150,5 +148,29 @@ body{
 .button:active {
 	position:relative;
 	top:1px;
+}
+.text-center{
+    text-align: center;
+}
+.price span{
+    font-size:35px;
+}
+.price{
+    font-size:31px;
+}
+.order{
+    font-size:20px;
+    margin:30px;
+}
+.order-form, textarea{
+    display: block;
+    margin:auto;
+    padding:auto;
+    margin:10px auto;
+}
+.order-form{
+    height:24px;
+    font-size:18px;
+    width:300px;
 }
 
